# vet

./: Cargo.toml  README.md
.github/workflows/: build.yml
docs/features/: README.md
docs/features/kafka/: README.md
docs/features/request/: README.md
src/: main.rs
src/modules/: aerospike.rs  kafka.rs  mod.rs  redis.rs  request.rs
tests/: run.sh
tests/categories/kafka/: docker-compose.yaml  main.feature  run.sh
tests/categories/request/: docker-compose.yaml  main.feature  run.sh
tests/categories/request/wiremock/mappings/: delete.json  get_status.json  head.json  headers.json  post_status.json  post_status_with_body.json  put.json  put_body.json
