[package]
name = "vet"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["request"]
request = ["dep:reqwest"]

[dependencies]
clap = { version = "4.4.3", features = ["derive"] }
tokio = { version = "1.32.0", features = ["full"] }
cucumber = "0.20.0"

reqwest = { version = "0.11.20", optional = true }