[package]
name = "vet"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
#default = ["request"]
default = ["all"]
all = ["request", "kafka", "aerospike", "redis"]
request = ["dep:reqwest"]
kafka = ["dep:rdkafka"]
aerospike = ["dep:aerospike"]
redis = ["dep:redis"]

[dependencies]
clap = { version = "4.4.3", features = ["derive"] }
tokio = { version = "1.32.0", features = ["full"] }
cucumber = "0.20.0"

reqwest = { version = "0.11.20", optional = true }
rdkafka = { version = "0.34.0", features = ["cmake-build"], optional = true }
aerospike = { version = "1.3.0", optional = true }
redis = { version = "0.23.3", optional = true }
