[package]
name = "vet"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
#default = ["request"]
default = ["all"]
all = ["request", "kafka", "aerospike", "redis"]
request = ["dep:reqwest"]
kafka = ["dep:rdkafka"]
aerospike = ["dep:aerospike"]
redis = ["dep:redis"]

[dependencies]
clap = { version = "4.5", features = ["derive"] }
tokio = { version = "1.37", features = ["full"] }
cucumber = "0.21"

reqwest = { version = "0.12", optional = true }
rdkafka = { version = "0.36", features = ["cmake-build"], optional = true }
aerospike = { version = "1.3", optional = true }
redis = { version = "0.25", optional = true }
